fixed featued images on mobile

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,6 +8,7 @@
   height: 150px;
   @media (min-width:0px) and (max-width:750px) {
   height: 250px;
+  margin-top: 50px;
   }
 }
 
