--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -193,7 +193,9 @@ a {
     flex-direction: column;
     margin: 100px auto;
     width: 100%;
-    height: 100%;
+    height: 425px;
+    background-color: inherit;
+    box-shadow: none;
   }
   .featured-image {
     height: 100%;
@@ -209,16 +211,32 @@ a {
      border-radius: 4px 4px 0 0;
     }
   }
-  .content-item {
+  .featured-content-item {
     display: flex;
     justify-content: center;
     flex-direction: column;
     padding-left: 24px;
 
     @media (min-width:0px) and (max-width:992px) {
+
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        padding-left: 24px;
+        background-color: white;
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        height: 250px;
+        border-radius: 0 0 4px 4px;
+
       .title {
         font-size: 24px;
         margin-top: 16px;
+      }
+
+      .description {
+        padding-right: 24px;
+        font-family: 'Roboto';
+        font-size: 16px;
       }
     }
 
